objects/CustomCountry__c.object
<CustomObject>
    <fields>
        <fullName>CountryISOCodeAlt__c</fullName>
        <description>currently for the 3-character version.</description>
        <label>Country ISO Code Alt</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryISOCode__c</fullName>
        <description>ISO Country Code corresponding to this key</description>
        <label>Country ISO Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryIntegrationValue__c</fullName>
        <label>Country Integration Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <description>Informational Only</description>
        <label>Country Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>